mongo-infra/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
 selector:
   matchLabels:
     app: mongodb
 template:
    metadata:
      labels:
        app: mongodb
    spec:
        containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
